1.1.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.inertial_gravity_wave.viz.Viz.rst.txt
polaris.tasks.ocean.inertial\_gravity\_wave.viz.Viz
===================================================

.. currentmodule:: polaris.tasks.ocean.inertial_gravity_wave.viz

.. autoclass:: Viz

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Viz.__init__
      ~Viz.add_dependency
      ~Viz.add_horiz_mesh_input_file
      ~Viz.add_init_input_file
      ~Viz.add_input_file
      ~Viz.add_output_file
      ~Viz.add_output_files_for_ocean_model_input
      ~Viz.add_produced_file
      ~Viz.add_property_check
      ~Viz.add_vert_coord_input_file
      ~Viz.check_properties
      ~Viz.constrain_resources
      ~Viz.get_horiz_mesh_filename
      ~Viz.get_init_filename
      ~Viz.get_vert_coord_filename
      ~Viz.map_from_native_model_vars
      ~Viz.map_to_native_model_vars
      ~Viz.open_model_dataset
      ~Viz.open_vert_coord_dataset
      ~Viz.process_inputs_and_outputs
      ~Viz.run
      ~Viz.runtime_setup
      ~Viz.set_resources
      ~Viz.set_shared_config
      ~Viz.setup
      ~Viz.validate_baselines
      ~Viz.work_path
      ~Viz.write_horiz_mesh_dataset
      ~Viz.write_initial_state_dataset
      ~Viz.write_model_dataset
      ~Viz.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Viz.cores
      ~Viz.gpus
      ~Viz.may_span_nodes
      ~Viz.min_cores
      ~Viz.min_gpus
      ~Viz.component
      ~Viz.config
      ~Viz.input_data
      ~Viz.logger
   
   